--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,9 +1,14 @@
 version: 2
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.10"
+
 python:
-   version: 3.10
    install:
       - method: pip
         path: .
         extra_requirements:
-           - docs, iplot
+           - docs
+           - iplot
