fix dockbuild and logging

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install uv
+        uv pip install "pyteomics>=4.6" --system
         uv pip install -e .[docs,iplot] --system
     
     - name: Build documentation
