try forcing pyteomics version in docs

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,8 +20,9 @@ jobs:
     - name: Install dependencies
       run: |
         pip install uv
-        uv pip install "pyteomics>=4.6" --system
+        uv pip install --force-reinstall "pyteomics>=4.6" --system
         uv pip install -e .[docs,iplot] --system
+        python -c "import pyteomics; print(f'pyteomics version: {pyteomics.__version__}')"
     
     - name: Build documentation
       run: |
