--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,6 +30,8 @@ jobs:
         cd docs
         make clean
         make html
+      env:
+        SPHINX_BUILD: 1
     
     - name: Check for documentation warnings/errors
       run: |
@@ -44,3 +46,5 @@ jobs:
         else
           echo "✅ Documentation build completed successfully with no warnings!"
         fi
+      env:
+        SPHINX_BUILD: 1
