--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -18,62 +18,14 @@ permissions:
   issues: write
 
 jobs:
-  benchmark:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ "3.10", "3.11", "3.12" ]
-        
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        # Fetch full history for benchmark comparisons
-        fetch-depth: 0
-        
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Install dependencies
-      run: |
-        pip install uv
-        uv pip install -e .[dev] --system
-        
-    - name: Run benchmarks
-      run: |
-        pytest benchmarks/test_spectrum_benchmarks.py --benchmark-only --benchmark-json=benchmarks/results_${{ matrix.python-version }}.json
-        
-    - name: Store benchmark results
-      uses: benchmark-action/github-action-benchmark@v1
-      if: github.ref == 'refs/heads/main'
-      with:
-        tool: 'pytest'
-        output-file-path: benchmarks/results_${{ matrix.python-version }}.json
-        # Store results in gh-pages branch
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        auto-push: true
-        comment-on-alert: true
-        alert-threshold: '200%'
-        fail-on-alert: false
-        
-    - name: Upload benchmark artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: benchmark-results-py${{ matrix.python-version }}
-        path: |
-          benchmarks/results_${{ matrix.python-version }}.json
-          benchmarks/*.html
-        retention-days: 30
-
   benchmark-comparison:
     runs-on: ubuntu-latest
-    needs: benchmark
     if: github.event_name == 'pull_request'
     
     steps:
     - uses: actions/checkout@v4
       with:
+        # Fetch full history to access main branch
         fetch-depth: 0
         
     - name: Set up Python 3.11
@@ -86,68 +38,136 @@ jobs:
         pip install uv
         uv pip install -e .[dev] --system
         
-    - name: Download previous benchmark results
-      uses: actions/download-artifact@v4
-      continue-on-error: true
-      with:
-        name: benchmark-results-py3.11
-        path: benchmarks/
-        
-    - name: Run current benchmarks
-      working-directory: benchmarks
+    - name: Run benchmarks on PR branch
       run: |
-        pytest test_spectrum_benchmarks.py --benchmark-only --benchmark-json=current_results.json
+        pytest benchmarks/test_spectrum_benchmarks.py --benchmark-only --benchmark-json=benchmarks/pr_results.json
         
-    - name: Compare benchmarks
-      working-directory: benchmarks
+    - name: Checkout main branch source code and run benchmarks
       run: |
-        # Compare current results with previous baseline if it exists
-        if [ -f "results_3.11.json" ]; then
-          echo "Previous benchmark results found, performing comparison..."
-          pytest-benchmark compare --group-by=name current_results.json results_3.11.json || true
+        # Save the current spectrum_utils source code
+        mv spectrum_utils spectrum_utils_pr
+        
+        # Checkout only the spectrum_utils directory from main branch
+        if git checkout origin/main -- spectrum_utils 2>/dev/null; then
+          echo "Successfully checked out main branch source code"
+          
+          # Reinstall with main branch code
+          pip uninstall -y spectrum_utils
+          pip install -e . --no-deps
+          
+          # Run benchmarks on main branch code (using PR's benchmark tests)
+          pytest benchmarks/test_spectrum_benchmarks.py --benchmark-only --benchmark-json=benchmarks/main_results.json
+          
+          # Restore PR branch source code
+          rm -rf spectrum_utils
+          mv spectrum_utils_pr spectrum_utils
+          
+          # Reinstall with PR code
+          pip uninstall -y spectrum_utils
+          pip install -e . --no-deps
         else
-          echo "No previous benchmark results found, skipping comparison."
+          echo "Could not checkout main branch source code, skipping comparison"
+          # Restore PR code
+          mv spectrum_utils_pr spectrum_utils
+          # Create empty main results to signal no comparison available
+          echo '{"benchmarks": []}' > benchmarks/main_results.json
         fi
         
-    - name: Comment PR with benchmark results
+    - name: Comment PR with benchmark comparison
       uses: actions/github-script@v7
-      if: github.event_name == 'pull_request'
       with:
         script: |
           const fs = require('fs');
+          
           try {
-            const resultsPath = 'benchmarks/current_results.json';
-            if (fs.existsSync(resultsPath)) {
-              const results = JSON.parse(fs.readFileSync(resultsPath, 'utf8'));
-              const benchmarks = results.benchmarks;
+            // Load both result files
+            const prResults = JSON.parse(fs.readFileSync('benchmarks/pr_results.json', 'utf8'));
+            const mainResults = JSON.parse(fs.readFileSync('benchmarks/main_results.json', 'utf8'));
+            
+            // Check if main results are available
+            const hasMainResults = mainResults.benchmarks && mainResults.benchmarks.length > 0;
+            
+            let comment = '## 🚀 Performance Benchmark Results (Python 3.11)\n\n';
+            
+            if (!hasMainResults) {
+              // No comparison available - just show PR results
+              comment += '> **Note**: Could not compare with main branch. Showing PR results only.\n\n';
+              comment += '| Benchmark | Time (ms) | Min (ms) | Max (ms) | Rounds |\n';
+              comment += '|-----------|-----------|----------|----------|--------|\n';
               
-              let comment = '## 🚀 Performance Benchmark Results\n\n';
-              
-              // Check if previous results exist for comparison
-              const baselineExists = fs.existsSync('benchmarks/results_3.11.json');
-              if (!baselineExists) {
-                comment += '> **Note**: This is the first benchmark run - no baseline available for comparison.\n\n';
-              }
-              
-              comment += '| Benchmark | Mean | Min | Max | Rounds |\n';
-              comment += '|-----------|------|-----|-----|--------|\n';
-              
-              benchmarks.forEach(b => {
+              prResults.benchmarks.forEach(b => {
                 const mean = (b.stats.mean * 1000).toFixed(3);
                 const min = (b.stats.min * 1000).toFixed(3);
                 const max = (b.stats.max * 1000).toFixed(3);
-                comment += `| ${b.name} | ${mean}ms | ${min}ms | ${max}ms | ${b.stats.rounds} |\n`;
+                comment += `| ${b.name} | ${mean} | ${min} | ${max} | ${b.stats.rounds} |\n`;
               });
               
-              comment += '\n*Times are in milliseconds. Lower is better.*';
+              comment += '\n*Lower times are better.*';
+            } else {
+              // Full comparison available
+              comment += '**Comparing PR branch vs main branch**\n\n';
               
-              github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: comment
+              // Create a map of main results by benchmark name
+              const mainMap = {};
+              mainResults.benchmarks.forEach(b => {
+                mainMap[b.name] = b.stats.mean;
               });
+              
+              // Calculate comparisons
+              const THRESHOLD = 0.05; // 5% threshold for meaningful changes
+              let improvements = 0;
+              let regressions = 0;
+              let unchanged = 0;
+              
+              comment += '| Benchmark | PR (ms) | Main (ms) | Δ (ms) | Change % | Status |\n';
+              comment += '|-----------|---------|-----------|--------|----------|--------|\n';
+              
+              prResults.benchmarks.forEach(prBench => {
+                const prMean = prBench.stats.mean * 1000; // Convert to ms
+                const mainMean = mainMap[prBench.name] ? mainMap[prBench.name] * 1000 : null;
+                
+                if (mainMean) {
+                  const delta = prMean - mainMean;
+                  const changePercent = ((delta / mainMean) * 100);
+                  
+                  let status = '';
+                  if (Math.abs(changePercent) < THRESHOLD * 100) {
+                    status = '—';
+                    unchanged++;
+                  } else if (delta < 0) {
+                    status = `✅ ${Math.abs(changePercent).toFixed(1)}% faster`;
+                    improvements++;
+                  } else {
+                    status = `⚠️ ${changePercent.toFixed(1)}% slower`;
+                    regressions++;
+                  }
+                  
+                  comment += `| ${prBench.name} | ${prMean.toFixed(3)} | ${mainMean.toFixed(3)} | ${delta >= 0 ? '+' : ''}${delta.toFixed(3)} | ${changePercent >= 0 ? '+' : ''}${changePercent.toFixed(1)}% | ${status} |\n`;
+                } else {
+                  // New benchmark not in main
+                  comment += `| ${prBench.name} | ${prMean.toFixed(3)} | — | — | — | 🆕 New |\n`;
+                }
+              });
+              
+              // Add summary
+              comment += '\n### Summary\n\n';
+              if (improvements > 0 || regressions > 0 || unchanged > 0) {
+                comment += `- ✅ **${improvements}** improvement${improvements !== 1 ? 's' : ''} (>5% faster)\n`;
+                comment += `- ⚠️ **${regressions}** regression${regressions !== 1 ? 's' : ''} (>5% slower)\n`;
+                comment += `- **${unchanged}** unchanged (within ±5%)\n`;
+              }
+              
+              comment += '\n*Changes smaller than ±5% are not considered significant.*\n';
+              comment += '*Lower times are better.*';
             }
+            
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: comment
+            });
           } catch (error) {
             console.log('Could not post benchmark results:', error);
+            console.log(error.stack);
           }
